Fix notion preview dark mode appearance issue

--- a/docs/status/index.css
+++ b/docs/status/index.css
@@ -1,13 +1,7 @@
 html, body {
     margin: 0;
     overflow: hidden;
-    background: white;
 }
 body {
     padding: 0;
-}
-@media (prefers-color-scheme: dark) {
-    html {
-        background: #191919;
-    }
 }
